# hadoop-mr4c

./: Dockerfile  README.md  build.sh  pom.xml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  docker.yml  hadoop-mr4c-16.04.yml  hadoop-mr4c-latest.yml
deploy/: docker-stack.yml
deploy/volumes/: entrypoint.sh
deploy/volumes/hadoop/: yarn-site.xml
deploy/volumes/nginx/conf.d/: default.conf
docker/: Dockerfile  docker-stack.yml
docker/volumes/nginx/conf.d/: default.conf
src/main/cpp/: CMakeLists.txt
src/main/java/com/google/mr4c/stats/: StatsdClient.java
src/main/java/com/google/mr4c/util/: ByteBufferInputStream.java
src/main/jnaerator/: config.jnaerator
src/main/resources/: log4cxx.properties  log4j.properties  mr4c-hadoop-default.xml  mr4c-hadoop-site.xml
src/main/resources/conf/: mr4c-hadoop-site.xml  site.json
